--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,7 +29,7 @@ displayName="DestriumMod" #mandatory
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="destrium.png" #optional
 # A text field displayed in the mod UI
-credits="Mods pour le Serveur De Nuyy" #optional
+credits="Mods De Nuyy" #optional
 # A text field displayed in the mod UI
 authors="NuyyKatazou" #optional
 # The description text for the mod (multi line!) (#mandatory)
