--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.15.5
 
 # Mod Properties
-	mod_version = 1.0-SNAPSHOT
+	mod_version = 0.1.0-1.16.5-Fabric
 	maven_group = fr.amazonia.destriummod
 	archives_base_name = Fabric-DestriumMod-1.16
 
