--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 0.1.0-1.16.5-Fabric
 	maven_group = fr.amazonia.destriummod
-	archives_base_name = Fabric-DestriumMod-1.16
+	archives_base_name = DestriumMod
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
