--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '1.6.0-1.19.4' //#2 (nombre de maj depuis la version 1.19)
+version = '1.6.0-1.19.4-Forge' //#2 (nombre de maj depuis la version 1.19)
 group = 'fr.amazonia.destriummod' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'DestriumMod'
 
