--- a/gradle.properties
+++ b/gradle.properties
@@ -7,17 +7,17 @@ org.gradle.daemon=false
 ## Environment Properties
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
-minecraft_version=1.20.2
+minecraft_version=1.20.6
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.20.2,1.21)
+minecraft_version_range=[1.20.6,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=48.0.30
+forge_version=50.1.0
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[48,)
+forge_version_range=[0,)
 # The loader version range can only use the major version of Forge/FML as bounds
-loader_version_range=[48,)
+loader_version_range=[0,)
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -35,7 +35,7 @@ loader_version_range=[48,)
 mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1-2023.06.26-1.20.2
+mapping_version=2024.06.16-1.20.6
 
 
 ## Mod Properties
@@ -58,4 +58,4 @@ mod_group_id=fr.amazonia.destriummod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=NuyyKatazou
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=DestriumMod est un Mods qui deviendras aussi gros qu'un ModPacks !!!
+mod_description=DestriumMod is a Mods based on Exploration, Building, Tools and Machines !
